# S2SCS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py
app/api/: main.py  middleware.py  routes.py  websocket.py
app/audio/: capture.py  playback.py
app/cache/: cache_manager.py  model_cache.py
app/cs_detection/: cs_features.py  xlmr_model.py  xlmr_token_classifier.py
app/dialect/: camel_dialect.py
app/llm/: gemma_model.py  jais_model.py  prompt_builder.py  qwen_model.py
app/monitoring/: health.py  metrics.py
app/normalization/: arabic_normalizer.py
app/pipeline/: e2e_pipeline.py  main_pipeline.py  target_streaming_pipeline.py
app/streaming/: streamer.py
app/stt/: asr_model.py
app/tts/: tts_model.py  tts_router.py
app/utils/: logger.py
app/vad/: silero_vad.py
configs/: config.yaml
scripts/: download_jais.py  live_conversation.py  live_voice.py  run_pipeline.py  ws_client.py
tests/: test_api_endpoints.py  test_arabic_normalizer.py  test_asr_model.py  test_camel_dialect.py  test_code_switch_analysis.py  test_config_loader.py  test_cs_features.py  test_gemma_model.py  test_pipeline.py  test_prompt_builder.py  test_qwen_omni_tts.py  test_silero_vad.py  test_streamer.py  test_target_streaming_pipeline.py  test_text_normalization_module.py  test_tts_model.py  test_tts_router.py  test_xlmr_model.py  test_xlmr_token_classifier.py
