[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s2scs"
version = "0.1.0"
description = "Arabic-English speech-to-speech code-switching system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "bitsandbytes>=0.43.0",
    "camel-tools>=1.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "huggingface_hub>=0.34.0,<1.0.0",
    "numpy>=1.24.0",
    "pytest>=8.0.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.1",
    "qwen-asr",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "silero-vad>=5.1.2",
    "sounddevice>=0.4.7",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "transformers==4.57.6",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["app*"]
